backend server: api-routes re-rooted + new currentGameID route
